# LearnRust

./: Cargo.toml  README.md
src/: arrays_slices.rs  bindings.rs  collection.rs  collection_practices.rs  condition.rs  consts.rs  enums_study.rs  lib.rs  loops.rs  main.rs  option_example.rs  ownership.rs  panic_result.rs  pattern_match.rs  reference.rs  string_study.rs  struct_example.rs  type_study.rs  vars.rs
tests/: integration.rs
